--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* -----------USER INPUT TAB--------- */
+
+.pokeball-background {
+  outline: 2px solid black;
+  width: 100%;
+  height: 100vh;
+  background-size: 75%;
+  background-repeat: no-repeat;
+  background-image: url('https://24.media.tumblr.com/tumblr_md2qy86zYp1qmwn4mo1_500.gif');
+  background-position: bottom -1% left 0%;
+  /* filter: brightness(200%); */
+  position: fixed;
+  z-index: -1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* ----------POKEDEX TAB----------- */
+
+.pokeball-header {
+  background-image: url('./assets/Pokeball.png');
+  position: fixed;
+  -webkit-filter: brightness(200%);
+  filter: brightness(200%);
+  z-index: -1;
+  right: -90px;
+  top: -40px;
+  background-size: cover;
+  height: 300px;
+  width: 300px;
+  animation-direction: reverse;
+}
+@keyframes rotate {from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}}
+@-webkit-keyframes rotate {from {-webkit-transform: rotate(0deg);}
+  to {-webkit-transform: rotate(360deg);}}
+.pokeball-header {
+    -webkit-animation: 3s rotate linear infinite;
+    animation: 3s rotate linear infinite;
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-pokemon{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: .5rem;
 }
 
-.App-link {
-  color: #61dafb;
+/* ---------POKEMON CARD TAB------- */
+
+.card-pokemon {
+  border: 1px solid purple;
+  width: 200px;
+  height: 300px;
+}
+.card-pokemon ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+.img-pokemon-card {
+  width: 100px;
+}
+.info-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* -------POKEMON DETAIL TAB--------- */
+
+.container-type-abilities{
+  display: flex;
+  justify-content: space-around;
+}
+.container-moves {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+.container-moves li {
+  border: 1px solid silver;
+  margin: .5rem;
+  padding: .5rem;
+  border-radius: 10px;
 }
